<resources>
    <string name="app_name_simplicity_Connect">TRAMEX MEX5 UPDATER</string>
    <string name="bluetooth_adapter_bar_disabled">Bluetooth adapter disabled</string>
    <string name="toast_bluetooth_not_enabled">Bluetooth not enabled!</string>
    <string name="toast_bluetooth_enabled">Bluetooth enabled!</string>
    <string name="bluetooth_adapter_bar_turning_on">Turning on Bluetooth adapter…</string>
    <string name="bluetooth_adapter_enable_bar_enable">Enable</string>
    <string name="low_priority">Low Priority (100 &#8211; 125 ms)</string>
    <string name="balanced_priority">Bal. Priority (30 &#8211; 100 ms)</string>
    <string name="high_priority">High Priority (7.5 &#8211; 15 ms)</string>
    <string name="connection_priority_high">Connection priority: high</string>
    <string name="connection_priority_low">Connection priority: low power</string>
    <string name="connection_priority_balanced">Connection priority: balanced</string>
    <string name="Device_address">Device Address</string>
    <string name="non_connectible">Non-Connectible</string>
    <string name="connectible">Connectible</string>
    <string name="Request">Request</string>
    <string name="UUID_colon_space">UUID: \u0020</string>
    <string name="UUID_label">uuid</string>
    <string name="value_colon_space">Value: \u0020</string>
    <string name="Enter_new_name">Enter new name</string>
    <string name="filter_edit_text_search_criteria">Name, address or raw data</string>
    <string name="Beacon_Type">Beacon Type</string>
    <string name="only_favorites">Favorites</string>
    <string name="only_connectible">Connectible</string>
    <string name="only_bonded">Bonded</string>
    <string name="Descriptors_colon">Descriptors:</string>
    <string name="no_characteristics">No characteristics in service</string>
    <string name="more_info">More Info</string>
    <string name="Less_Info">Less Info</string>
    <string name="log_example_time">Example log time</string>
    <string name="log_example_text">Example log text: longer, to show it in two or more lines</string>
    <string name="RSSI">RSSI</string>
    <string name="n_dBm">%d dBm</string>
    <string name="MTU_colon_n">MTU: %d</string>
    <string name="Preparing_logs_please_wait">Preparing logs, please wait&#8230;</string>
    <string name="Logs_cannot_be_generated">Logs cannot be generated!</string>
    <string name="devices_sorted_by_descending_rssi">Devices sorted by descending rssi</string>
    <string name="connection_interval">Connection Interval</string>
    <string name="not_advertising_shortcut">N/A</string>
    <string name="You_cannot_send_empty_value_to_charac">You cannot send an empty value to characteristic!</string>
    <string name="Write_with_response">Write with response (write request)</string>
    <string name="Write_without_response">Write without response (write command)</string>
    <string name="leave_application_info">Leaving application will disconnect all devices!</string>
    <string name="Do_not_give_this_warning_again">Do not give this warning again</string>
    <string name="Leave_Application">Leave Application?</string>
    <string name="filter_rssi_not_set">Not Set</string>
    <string name="ota_service_name">OTA Service</string>
    <string name="blinky_service_name">Blinky</string>
    <string name="throughput_test_service_name">Throughput Test Service</string>
    <string name="throughput_information_service_name">Throughput Information Service</string>
    <string name="ota_control_attribute_characteristic_name">OTA Control Attribute</string>
    <string name="ota_data_characteristic_name">OTA Data</string>
    <string name="fw_version_characteristic_name">Fw version</string>
    <string name="ota_version_characteristic_name">OTA Version</string>
    <string name="bootloader_version_characteristic_name">Bootloader Version</string>
    <string name="application_version_characteristic_name">Application Version</string>
    <string name="led_control_characteristic_name">LED Control</string>
    <string name="report_button_characteristic_name">Report Button</string>
    <string name="indications_characteristic_name">Indications</string>
    <string name="notifications_characteristic_name">Notifications</string>
    <string name="transmission_on_characteristic_name">Transmission ON</string>
    <string name="throughput_result_characteristic_name">Throughput Result</string>
    <string name="connection_phy_characteristic_name">Connection PHY</string>
    <string name="connection_interval_characteristic_name">Connection Interval</string>
    <string name="slave_latency_characteristic_name">Slave Latency</string>
    <string name="supervision_timeout_characteristic_name">Supervision Timeout</string>
    <string name="pdu_size_characteristic_name">PDU Size</string>
    <string name="mtu_size_characteristic_name">MTU Size</string>
    <string name="type">Type</string>
    <string name="temperature">Temperature</string>
    <string name="f_symbol">°F</string>
    <string name="c_symbol">°C</string>
    <string name="content_desc_no_devices_discovered">Warning, no devices discovered</string>
    <string name="select_device">Select a BLE Device</string>
    <string name="DEVICE_LIST">DEVICE LIST (%d)</string>
    <string name="soc_must_be_connected">A circuit board (SoC) must be connected and
        running \"%s\" firmware."</string>
    <string name="please_connect_a_device">Please connect a device</string>
    <string name="reading_board_type">Reading board type…</string>
    <string name="failed_to_discover_services">Failed to discover services</string>
    <string name="main_menu_title">Menu title</string>
    <string name="main_menu_description">Short description of menu tile</string>
    <string name="warning_bar_additional_info">Info</string>
    <string name="location_enable">Enable</string>
    <string name="location_disabled">Location disabled</string>
    <string name="bluetooth_permissions_denied">Bluetooth permissions denied</string>
    <string name="Location_service">Location service</string>
    <string name="location_service_info">On some Android phones you have to enable Location
        service in order to scan for Bluetooth Low Energy devices. If you can\'t find any
        Bluetooth devices, please ensure you have enabled Location service.</string>
    <string name="location_permission">Location permission</string>
    <string name="location_permission_info">In order for this app to use the Location service,
        you have to grant a permission first. Please keep in mind, that on some Android
        devices this service is needed for proper Bluetooth Low Energy device discovery.</string>
    <string name="bluetooth_permissions">Bluetooth permissions</string>
    <string name="bluetooth_permissions_info">Since Android 12, performing BLE-related operations
        (such as scanning, advertising or connecting) requires the user to explicitly grant the
        \"Nearby devices\" permission for the app. Please keep in mind that this app relies
        heavily on these system features and its capabilities will be severely reduced without them.
    </string>
    <string name="text_advertiser_purpose_explanation">Utilize this device as a Bluetooth \n Low
        Energy peripheral</string>
    <string name="main_menu_description_thermometer">View readings from the Health Thermometer service</string>
    <string name="main_menu_description_browser">View info about nearby devices and their properties.</string>
    <string name="main_menu_description_connected_lighting">Control a Dynamic Multiprotocol application of connected lights and switches</string>
    <string name="main_menu_description_range_test">Evaluate the link budget and range of EFR32</string>
    <string name="main_menu_description_throughput">Measure throughput between the mobile device and EFR32</string>
    <string name="main_menu_description_blinky">Control LED and receive button presses on a Silabs kit</string>
    <string name="main_menu_description_iop_test">Exercise common Bluetooth operations with Silicon Labs hardware and software.</string>
    <string name="main_menu_description_gatt_configurator">Allows you to create a local GATT database.</string>
    <string name="rename_characteristic">Rename characteristic</string>
    <string name="rename_service">Rename service</string>
    <string name="name_field_cannot_be_empty">Name field cannot be empty!</string>
    <string name="title_Health_Thermometer">Health Thermometer</string>
    <string name="title_Connected_Lighting">Connected Lighting</string>
    <string name="title_Range_Test">Range Test</string>
    <string name="title_Throughput">Throughput</string>
    <string name="title_Advertiser">Advertiser</string>
    <string name="title_Interoperability_Test">Interoperability Test</string>
    <string name="title_new_GATT_Server">New GATT Server</string>
    <string name="title_uuid_dictionary">UUID Dictionary</string>
    <string name="title_Blinky">Blinky</string>
    <string name="title_characteristics">Characteristics</string>
    <string name="title_services">Services</string>
    <string name="title_Mappings_about">About Mappings Dictionary</string>
    <string name="title_device_name">Device name</string>
    <string name="title_save">Save</string>
    <string name="title_switch_all_off">Switch all OFF</string>
    <string name="title_unsaved_changes">Unsaved Changes</string>
    <string name="title_import">Import</string>
    <string name="title_export">Export</string>
    <string name="demo_connection_progress_dialog_connecting">Connecting…</string>
    <string name="demo_connection_progress_dialog_reading_device_state">"Reading device state…"</string>
    <string name="demo_connection_progress_dialog_loading">Loading…</string>
    <string name="Preparing_for_OTA">Preparing for OTA</string>
    <string name="preparing_for_upload">Preparing for upload</string>
    <string name="OTA_Device_Firmware_Update">MEX5 OTA Firmware Update</string>
    <string name="ota_choose_file">Choose file to update</string>
    <string name="ota_type_partial">Partial</string>
    <string name="ota_type_full">Full</string>
    <string name="upload_progress">Upload progress</string>
    <string name="File_Name_colon">File Name:</string>
    <string name="File_Size_colon">File Size:</string>
    <string name="Packet_Size_colon">Packet Size:</string>
    <string name="Mode_colon">Mode:</string>
    <string name="type_colon">Type:</string>
    <string name="Speed">Speed</string>
    <string name="Reliability">Reliability</string>
    <string name="Application_colon">Application:</string>
    <string name="Apploader_colon">Apploader:</string>
    <string name="btn_upload">Upload</string>
    <string name="request_mtu">Request MTU</string>
    <string name="End">End</string>
    <string name="mtu_max">250</string>
    <string name="mtu_min">23</string>
    <string name="zero_percent">0%</string>
    <string name="problem_while_preparing_the_file">There was a problem while preparing the file!</string>
    <string name="incorrect_file">Incorrect file!</string>
    <string name="select_apploader_gbl_file">Select apploader .gbl file</string>
    <string name="select_application_gbl_file">Select application .gbl file</string>
    <string name="ota_filename_s">\/%s</string>
    <string name="ota_loading_text">Loading…</string>
    <string name="ota_rebooting_text">Rebooting…</string>
    <string name="button_connect">Connect</string>
    <string name="button_cancel">Cancel</string>
    <string name="devices_list_list_item_default_device_name">Default Device</string>
    <string name="content_desc_scanned_device_manufacturer_icon">Scanned device manufacturer
        icon</string>
    <string name="logs">Logs</string>
    <string name="ota_dfu_description">Press the Upload button to update the connected MEX5, or press cancel to return to device info</string>
</resources>