<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/show_logs"
        android:icon="@drawable/redesign_ic_menu_device_services_logs"
        android:title="@string/logs"
        android:visible="false"
        app:iconTint="@color/menu_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/request_priority"
        android:icon="@drawable/redesign_ic_menu_device_services_connection_interval"
        android:title="@string/connection_interval"
        android:visible="false"
        app:iconTint="@color/menu_icon"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/request_mtu"
        android:icon="@drawable/redesign_ic_menu_device_services_mtu"
        android:title="@string/request_mtu"
        android:visible="false"
        app:iconTint="@color/menu_icon"
        app:showAsAction="ifRoom" />

</menu>
