<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/dialog_card" >

    <LinearLayout
        style="@style/dialog_margins"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/dialog_margin_horizontal"
        android:orientation="vertical" >

        <TextView
            style="@style/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dialog_title_margin_bottom"
            android:text="@string/OTA_Device_Firmware_Update" />

        <TextView
            style="@style/dialog_text_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_S"
            android:text="@string/ota_dfu_description" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:layout_weight="1"
            android:visibility="invisible"
            tools:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:text="@string/type_colon"
                        android:textSize="@dimen/ota_config_dialog_text_size" />

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.7"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_type_partial"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:fontFamily="sans-serif"
                            android:text="@string/ota_type_partial"
                            android:textSize="@dimen/ota_config_dialog_text_size" />

                        <RadioButton
                            android:id="@+id/rb_type_full"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:text="@string/ota_type_full"
                            android:textSize="@dimen/ota_config_dialog_text_size" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:gravity="center_vertical"
                        android:text="@string/Mode_colon"
                        android:textSize="@dimen/ota_config_dialog_text_size" />

                    <RadioGroup
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/reliability_radio_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:fontFamily="sans-serif"
                            android:text="@string/Reliability"
                            android:textSize="@dimen/ota_config_dialog_text_size" />

                        <RadioButton
                            android:id="@+id/speed_radio_button"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:text="@string/Speed"
                            android:textSize="@dimen/ota_config_dialog_text_size" />
                    </RadioGroup>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/space_XS"
                    android:background="@color/divider_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/space_XS">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:text="@string/Application_colon"
                        android:textSize="@dimen/ota_config_dialog_text_size" />

                    <Button
                        android:id="@+id/select_app_file_btn"
                        style="@style/button_external_link"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="@string/select_application_gbl_file" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/app_loader_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:fontFamily="sans-serif"
                        android:gravity="center_vertical"
                        android:text="@string/Apploader_colon"
                        android:textSize="@dimen/ota_config_dialog_text_size" />

                    <Button
                        android:id="@+id/select_apploader_file_btn"
                        style="@style/button_external_link"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:gravity="center"
                        android:text="@string/select_apploader_gbl_file"
                        tools:text="mex5.gbl" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dialog_button_margin_top"
            android:layout_marginHorizontal="@dimen/dialog_button_margin_end"
            android:gravity="end">

            <Button android:id="@+id/ota_cancel"
                style="@style/dialog_button_negative_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_marginEnd="@dimen/dialog_margin_between_buttons"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/ota_proceed"
                style="@style/dialog_button_positive_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="sans-serif-medium"
                android:text="@string/btn_upload" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

