<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/card_view"
    style="@style/list_item_card_view_box"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/list_item_card_view_container_margins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/manufacturer_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/redesign_ic_scanned_device_windows"
                    android:contentDescription="@string/content_desc_scanned_device_manufacturer_icon"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_XS"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/device_name"
                        style="@style/list_item_card_view_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devices_list_list_item_default_device_name" />

                    <TextView
                        android:id="@+id/tv_device_address"
                        style="@style/list_item_card_view_text_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Device_address"
                        android:visibility="gone" />

                </LinearLayout>

                <com.tramexmeters.mex5update.common.views.ActionButton
                    android:id="@+id/connection_btn"
                    style="@style/button_with_states"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:minHeight="@dimen/card_view_main_icon_dimension"
                    tools:text="@string/button_connect" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_XS"
                android:layout_marginBottom="@dimen/space_XS"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/space_XS"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_view_margin_vertical" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/advertisement_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

